# codex-converter

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
codex_converter/: __init__.py  cli.py  converter.py  discovery.py  frontmatter.py  models.py  safety.py
docs/: progress.md  prompt.md  proposal.md
docs/instructions/: 01_init.md  02_planning.md  03_implement.md
docs/tasks/: 01_project_scaffold.md  02_discovery_and_report.md  03_instruction_conversion.md  04_skills_and_commands_conversion.md  05_agents_conversion.md  06_settings_and_safety.md  07_end_to_end_and_docs.md
docs/v1-01_init/tasks/: 02_discovery_and_report.md  03_instruction_conversion.md  04_skills_and_commands_conversion.md  05_agents_conversion.md
docs/v1-02_feedback/: progress.md  prompt.md  proposal.md
docs/v1-02_feedback/instructions/: 01_feedback.md  02_planning.md  03_implement.md
docs/v1-02_feedback/tasks/: 01_settings_merge_and_toml.md  02_report_and_output_review.md  03_gitignore_flag.md  04_clean_command.md  05_readme_and_acceptance_sweep.md
docs/v1-03_versioning/instructions/: 01_version.md
tests/: test_cli.py
