[project]
name = "codex-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.16.0",
]

[project.scripts]
codex-converter = "codex_converter.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
