[project]
name = "codex-converter"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.16.0",
]

[project.scripts]
codex-converter = "codex_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
